<resources>
    <string name="app_name">그냥 게임</string>
    <string name="auto_login">자동 로그인</string>
    <string name="login">로그인</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="sign_up">회원가입</string>
    <string name="login_fb">Facebook으로 로그인하기</string>
    <string name="login_google">Google로 로그인하기</string>
    <string name="empty_idpw">아이디와 비밀번호를 입력해주세요.</string>
    <string name="enter_room">참가하기</string>
    <string name="create_room">방 만들기</string>
    <string name="entry_list">참가자 목록</string>
    <string name="game_list">게임 목록</string>
    <string name="gamestart">게임 시작</string>
    <string name="scan_QR">참여하려는 방의 QR 코드를 스캔해주세요.</string>
    <string name="survey">설문 작성하기</string>
    <string name="option">설정</string>
    <string name="not_scanned">올바른 QR코드인지 확인해주세요.</string>
    <string name="server_open_fail">방 생성에 실패했습니다. 인터넷 상태를 확인하고 다시 시도해주세요.</string>
    <string name="client_open_fail">방 참가에 실패했습니다. 인터넷 상태를 확인하고 다시 시도해주세요.</string>


    <string name="find_me">나를 찾아줘</string>
    <string name="find_me_intro">나를 찾아줘 게임 설명</string>
    <string name="mafia">마피아</string>

    <string name="choose_first_impression">첫인상 선택</string>
    <string name="check_survey">설문지 확인</string>
</resources>

