<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/Title_image"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/splash_test"
        android:scaleType="fitXY"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:id="@+id/ID_layout"
        android:layout_below="@id/Title_image"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/id"
            android:background="@color/signiture"/>
        <AutoCompleteTextView
            android:id="@+id/id_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:nextFocusDown="@id/pw_text"/>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:id="@+id/PW_layout"
        android:layout_below="@id/ID_layout"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/pw"
            android:background="@color/signiture"/>
        <AutoCompleteTextView
            android:id="@+id/pw_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"/>
    </androidx.cardview.widget.CardView>

    <CheckBox
        android:id="@+id/auto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_login"
        android:layout_below="@id/PW_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="60dp"
        android:id="@+id/login_btn"
        android:layout_below="@id/auto_login"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true">
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:background="@color/signiture"
            android:textSize="25sp"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/login_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_pw"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/login_sns"
        android:layout_below="@id/login_btn"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/facebook"
            app:cardCornerRadius="1dp"
            app:cardUseCompatPadding="true">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/login_fb"
                android:background="@drawable/btn_signin_facebook"
                android:text="@string/login_fb"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardCornerRadius="1dp"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="10dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/login_google"
                android:background="@drawable/btn_signin_google"
                android:text="@string/login_google"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</RelativeLayout>